First draft of chapter.md
- Completed draft of `A Tiled Renderer` chapter.
- Add images for chapter
- Move function declarations out of the constructor of non-singleton
  objects and into the object's prototype.
- Removing 3rd party gl-matrix library
- Including implementation of a 3x3 matrix with scale, translate, and
  multiply functions.

--- a/tiled-renderer/stylesheets/renderer.css
+++ b/tiled-renderer/stylesheets/renderer.css
@@ -21,6 +21,7 @@ p {
 }
 
 p.info {
+    margin-top: 16px;
     font-size: 14pt;
 }
 
@@ -29,8 +30,7 @@ img {
 }
 
 #glCanvas {
-    margin-left: 80px;
-    border: 4px solid blue;
+    margin-left: 20px;
     display: inline-block;
     cursor: pointer;
 }
