--- a/spreadsheet/styles.css
+++ b/spreadsheet/styles.css
@@ -8,21 +8,11 @@ input {
   color: transparent;
   background: transparent;
 }
-input:focus {
-  color: #111;
-  background: #efe;
-}
-input:focus + div { white-space: nowrap }
-table { border-collapse: collapse }
-td div {
-  width: 120px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-td div.error { color: #600 }
-td.formula { background: #eef }
-th {
-  width: 30px;
-  background: #ddd;
-}
-td, th { border: 1px solid #ccc }
+input:focus { color: #111; background: #efe; }
+input:focus + div { white-space: nowrap; }
+table { border-collapse: collapse; }
+td div { width: 120px; overflow: hidden; text-overflow: ellipsis; }
+td div.error { color: #600; }
+td.formula { background: #eef; }
+th { width: 30px; background: #ddd; }
+td, th { border: 1px solid #ccc; }
