--- a/spreadsheet/styles.css
+++ b/spreadsheet/styles.css
@@ -1,12 +1,8 @@
 input {
-  border: 0;
-  padding: 0;
-  width: 120px;
-  height: 1.3em;
-  font-size: 100%;
+  border: 0; padding: 0;
+  width: 120px; height: 1.3em; font-size: 100%;
   position: absolute;
-  color: transparent;
-  background: transparent;
+  color: transparent; background: transparent;
 }
 input:focus { color: #111; background: #efe; }
 input:focus + div { white-space: nowrap; }
