--- a/spreadsheet/es5/styles.css
+++ b/spreadsheet/es5/styles.css
@@ -1,7 +1,6 @@
 input {
-  position: absolute; border: 0; padding: 0;
-  width: 120px; height: 1.3em; font-size: 100%;
-  color: transparent; background: transparent;
+  position: absolute; border: 0; padding: 0; width: 120px; height: 1.3em;
+  font-size: 100%; color: transparent; background: transparent;
 }
 input:focus { color: #111; background: #efe; }
 input:focus + div { white-space: nowrap; }
