--- a/spreadsheet/styles.css
+++ b/spreadsheet/styles.css
@@ -1,12 +1,11 @@
-input { position: absolute; border: 0; padding: 0;
-        width: 120px; height: 1.3em; font-size: 100%;
-        color: transparent; background: transparent; }
+input { position: absolute; border: 0; padding: 0; width: 120px; height: 1.3em;
+        font-size: 100%; color: transparent; background: transparent; }
 input:focus { color: #111; background: #efe; }
 input:focus + div { white-space: nowrap; }
 table { border-collapse: collapse; }
-td div { width: 120px; overflow: hidden; text-overflow: ellipsis; text-align: right }
-td div.text { text-align: left; }
-td div.error { color: #800; text-align: center; font-size: 90%; border: solid 1px #800 }
-td.formula { background: #eef; }
 th { background: #ddd; }
 td, th { border: 1px solid #ccc; }
+td.formula { background: #eef; }
+td div { text-align: right; width: 120px; overflow: hidden; text-overflow: ellipsis; }
+td div.text { text-align: left; }
+td div.error { text-align: center; color: #800; font-size: 90%; border: solid 1px #800 }
