--- a/spreadsheet/es5/styles.css
+++ b/spreadsheet/es5/styles.css
@@ -1,1 +1,11 @@
-../styles.css
+input { position: absolute; border: 0; padding: 0; width: 120px; height: 1.3em;
+        font-size: 100%; color: transparent; background: transparent; }
+input:focus { color: #111; background: #efe; }
+input:focus + div { white-space: nowrap; }
+table { border-collapse: collapse; }
+th { background: #ddd; }
+td, th { border: 1px solid #ccc; }
+td.formula { background: #eef; }
+td div { text-align: right; width: 120px; overflow: hidden; text-overflow: ellipsis; }
+td div.text { text-align: left; }
+td div.error { text-align: center; color: #800; font-size: 90%; border: solid 1px #800 }
