--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -11,7 +11,7 @@
     <tr>
       <td><%= trial.analyzer.user.gender %></td>
       <td><%= trial.analyzer.device.method %></td>
-      <td><%= trial.analyzer.parser.format %></td>
+      <td><%= trial.analyzer.processor.format %></td>
       <td><%= trial.analyzer.device.trial %></td>
       <td><%= trial.analyzer.device.steps %></td>
       <td><%= trial.analyzer.steps %></td>
