--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -7,20 +7,25 @@
   <th>Calculated</th>
   <th>Delta</th>
   <th></th>
-  <% trials.each do |trial| %>
+  <% uploads.each do |upload| %>
+    <% analyzer = upload.analyzer %>
     <tr>
-      <td><%= trial.analyzer.user.gender %></td>
-      <td><%= trial.analyzer.device.method %></td>
-      <td><%= trial.analyzer.processor.format %></td>
-      <td><%= trial.analyzer.device.trial %></td>
-      <td><%= trial.analyzer.device.steps %></td>
-      <td><%= trial.analyzer.steps %></td>
-      <td><%= trial.analyzer.steps - trial.analyzer.device.steps %></td>
+      <td><%= analyzer.user.gender %></td>
+      <td><%= analyzer.device.method %></td>
+      <td><%= analyzer.processor.format %></td>
+      <td><%= analyzer.device.trial %></td>
+      <td><%= analyzer.device.steps %></td>
+      <td><%= analyzer.steps %></td>
+      <td>
+        <%= 
+          analyzer.device.steps ? (analyzer.steps - analyzer.device.steps) : '-' 
+        %>
+      </td>
       <% if detail_hidden %>
-        <td><a href=<%= "trial/" + trial.file_name %>>Detail</a></td>
+        <td><a href=<%= "upload/" + upload.file_name %>>Detail</a></td>
       <% else %>
-        <td><%= ViewHelper.format_distance(trial.analyzer.distance) %></td>
-        <td><%= ViewHelper.format_time(trial.analyzer.time) %></td>
+        <td><%= ViewHelper.format_distance(analyzer.distance) %></td>
+        <td><%= ViewHelper.format_time(analyzer.time) %></td>
       <% end %>
     </tr>
   <% end %>
