--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -1,26 +1,31 @@
 <table class="summary">
-  <th>User</th>
+  <th>Name</th>
   <th>Method</th>
   <th>Format</th>
-  <th>Trial</th>
   <th>Actual</th>
   <th>Calculated</th>
   <th>Delta</th>
+  <th>User</th>
   <th></th>
-  <% trials.each do |trial| %>
+  <% uploads.each do |upload| %>
+    <% analyzer = upload.analyzer %>
     <tr>
-      <td><%= trial.analyzer.user.gender %></td>
-      <td><%= trial.analyzer.device.method %></td>
-      <td><%= trial.analyzer.processor.format %></td>
-      <td><%= trial.analyzer.device.trial %></td>
-      <td><%= trial.analyzer.device.steps %></td>
-      <td><%= trial.analyzer.steps %></td>
-      <td><%= trial.analyzer.steps - trial.analyzer.device.steps %></td>
+      <td><%= analyzer.trial.name %></td>
+      <td><%= analyzer.trial.method %></td>
+      <td><%= analyzer.processor.format %></td>
+      <td><%= analyzer.trial.steps %></td>
+      <td><%= analyzer.steps %></td>
+      <td>
+        <%= 
+          analyzer.trial.steps ? (analyzer.steps - analyzer.trial.steps) : '-' 
+        %>
+      </td>
+      <td><%= analyzer.user.gender %></td>
       <% if detail_hidden %>
-        <td><a href=<%= "trial/" + trial.file_name %>>Detail</a></td>
+        <td><a href=<%= "upload/" + upload.file_path %>>Detail</a></td>
       <% else %>
-        <td><%= ViewHelper.format_distance(trial.analyzer.distance) %></td>
-        <td><%= ViewHelper.format_time(trial.analyzer.time) %></td>
+        <td><%= ViewHelper.format_distance(analyzer.distance) %></td>
+        <td><%= ViewHelper.format_time(analyzer.time) %></td>
       <% end %>
     </tr>
   <% end %>
