--- a/pedometer/views/uploads.erb
+++ b/pedometer/views/uploads.erb
@@ -2,14 +2,14 @@
 
 <html>
   <div class="error"><%= @error %></div>
-  <%= erb :summary, locals: { trials: @trials, detail_hidden: true } %>
+  <%= erb :summary, locals: { uploads: @uploads, detail_hidden: true } %>
   <form method="post" action="/create" enctype="multipart/form-data">
-    <h3 class="upload-header">Device Info</h3>
+    <h3 class="upload-header">Trial Info</h3>
     <input name="processor[file_upload]" type="file">
-    <input name="device[rate]" type="number" class="params" placeholder="Sampling Rate">
-    <input name="device[steps]" type="number" class="params" placeholder="Actual Step Count">
-    <input name="device[trial]" type="number" class="params" placeholder="Trial Number">
-    <select name="device[method]" class="params">
+    <input name="trial[name]" class="params" placeholder="Name">
+    <input name="trial[rate]" type="number" class="params" placeholder="Sampling Rate">
+    <input name="trial[steps]" type="number" class="params" placeholder="Actual Step Count">
+    <select name="trial[method]" class="params">
       <option value="">(Select a method)</option>
       <option value="walk">Walking</option>
       <option value="run">Running</option>
