More work on web app section of chapter, general review of entire chapter

--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -24,8 +24,8 @@
       <% if detail_hidden %>
         <td><a href=<%= "upload/" + upload.file_path %>>Detail</a></td>
       <% else %>
-        <td><%= ViewHelper.format_distance(analyzer.distance) %></td>
-        <td><%= ViewHelper.format_time(analyzer.time) %></td>
+        <td><%= format_distance(analyzer.distance) %></td>
+        <td><%= format_time(analyzer.time) %></td>
       <% end %>
     </tr>
   <% end %>
