--- a/wiki/app/views/list.html
+++ b/wiki/app/views/list.html
@@ -1,9 +1,9 @@
 <div id="listView">
-    <h1>Existing Pages</h1>
+    <h1>Pages</h1>
     {for page in pages}
         <a href="/wiki/{page.id}">{page.id}</a><br/>
     {/for}
-    <form action="/wiki/add" method="post" id="addform">
+    <form action="/add" method="post" id="addform">
         <p><button type="submit">Add new page</button><input type="text" name="title" value="title"/></p>
     </form>
 </div>
