--- a/pedometer/views/summary.erb
+++ b/pedometer/views/summary.erb
@@ -18,7 +18,7 @@
       <td><%= analyzer.trial.steps ? (analyzer.steps - analyzer.trial.steps) : '' %></td>
       <td><%= analyzer.user.gender %></td>
       <% if detail_hidden %>
-        <td><a href=<%= "upload/" + Upload.file_path(analyzer) %>>Detail</a></td>
+        <td><a href=<%= "upload/" + Upload.generate_file_path(analyzer) %>>Detail</a></td>
       <% else %>
         <td><%= format_distance(analyzer.distance) %></td>
         <td><%= format_time(analyzer.time) %></td>
