--- a/pedometer/views/uploads.erb
+++ b/pedometer/views/uploads.erb
@@ -22,8 +22,8 @@
       <option value="female">Female</option>
       <option value="male">Male</option>
     </select>
-    <input class="params" type="number" name="user[height]" placeholder="Height (cm)">
-    <input class="params" type="number" name="user[stride]" placeholder="Stride (cm)">
+    <input class="params" type="number" step="0.1" name="user[height]" placeholder="Height (cm)">
+    <input class="params" type="number" step="0.1" name="user[stride]" placeholder="Stride (cm)">
     <div class="controls"><input type="submit" value="submit"></div>
   </form>
 </html>
