Get HTML building locally, at least.

--- a/html/posa/templates/posa.html
+++ b/html/posa/templates/posa.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="provenance" content="$Id: index.html 1472 2012-09-21 22:17:41Z audrey $" />
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css" type="text/css" />
-    <link rel="stylesheet" href="/en/posa.css" type="text/css" />
+    <link rel="stylesheet" href="/theme/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="/theme/css/bootstrap-responsive.css" type="text/css" />
+    <link rel="stylesheet" href="/theme/posa.css" type="text/css" />
     <title>{{ SITENAME }}{% if page is defined and page.title is defined %} | {{ page.title }}{% endif %}</title>
 
 </head>
@@ -18,7 +18,7 @@
           <!--	  <img src="theme/images/logo.png" align="left" style="padding:10px;vertical-align:middle" /> -->
           <h1>{{ SITENAME }}</h1>
           <blockquote class="pull-right">
-<!--             &hellip;a wonderful book and a wonderful contribution to the industry. 
+<!--             &hellip;a wonderful book and a wonderful contribution to the industry.
             <small><a href="http://en.wikipedia.org/wiki/Grady_Booch">Grady
                 Booch</a></small> -->
             </blockquote>
@@ -39,7 +39,7 @@
             history.  As a result, they repeat one another's mistakes
             rather than building on one another's successes.
           </p>
-          
+
           <p>
             Our goal is to change that.  In these two books, the authors of
             four dozen open source applications explain how their software
@@ -49,7 +49,7 @@
             the contributors to these books provide unique insights into how
             they think.
           </p>
-          
+
           <p>
             If you are a junior developer, and want to learn how your
             more experienced colleagues think, these books are the place
@@ -63,7 +63,7 @@
             or on Twitter at <a href="http://twitter.com/aosabook">@aosabook</a>
             and using the <a href="http://twitter.com/#!/search/%23aosa">#aosa</a> hashtag.
           </p>
-          
+
           <div class="alert alert-success">
           	<strong>September 21, 2012</strong>: <em>The Architecture of Open Source Applications, Volume II</em> is now available <a href="http://www.lulu.com/shop/amy-brown-and-greg-wilson/the-architecture-of-open-source-applications-volume-ii-structure-scale-and-a-few-more-fearless-hacks/ebook/product-20402674.html">in epub format</a>.
           </div>
@@ -73,7 +73,7 @@
           <div class="alert alert-success">
           	<strong>June 6, 2012</strong>: <em>The Architecture of Open Source Applications, Volume II</em> is now available <a href="http://www.amazon.com/Architecture-Source-Applications-Volume-ebook/dp/B008940UYK">for Kindle</a>.
           	It will be available in epub soon. All royalties
-          	from sales of the book in every format go to 
+          	from sales of the book in every format go to
           	<a href="http://www.amnesty.org/">Amnesty International</a>.
           </div>
 
@@ -81,7 +81,7 @@
       </div>
       {% endblock intro %}
       {# le book content #}
-      {% block content %}          
+      {% block content %}
       {% endblock content %}
       {% block footer %}
       <div class="row">
